# PSU-IT_Labs_2016-2020

./: .gitignore  C help.txt  CMakeLists.txt  GameStructs.h  GoodBooze Яблонский А.С..docx  PREFERENCES.h  README.md  Star-Wars.docx  ep-fk-lg-bk-1.doc  fit-1.doc  fit-4.doc  main.cpp  preferences.h  readme.md  record-table.txt  Заявление на тему дипломного проекта.doc  Плюсы-минусы Яблонский А.С.docx  Яблонский А.С. Заявление на тему дипломного проекта.docx  ист-мат.docx  конденсаторы+ток-16 ИТ — копия.mtf  сессия 1 1k-it.doc
AKG/lab1/: Lab1-16IT3-Yablonski.docx
AKG/lab2/: CameraMotionHelper.txt  Lab2-16IT3-Yablonski.docx  ModelDescription.h  main.cpp  main.txt
AKG/lab3/: GLUtils.h  Lab3-16IT3-Borodich.docx  Lab3-16IT3-Yablonski.docx  (+4 more)
AKSIS/: Яблонский А. Лаб. 1.docx
BUSINESS/: ~$Доклад.docx  ~WRL0005.tmp  Доклад.docx
DB/: firm.sql  readme.md  sql-help.txt  Яблонский лаб10.docx  Яблонский лаб11.docx  Яблонский лаб12.docx  Яблонский лаб13.docx  Яблонский лаб9.docx
IIS/: iis-help.txt  task10  task11  task12  task13  Лекция 1. Программирование на языке CLIPS.ppt  Программа.rar  Сумма ряда.clp
KSIS/: Plan.vsdx  Задание КП КСиС 16ИТ3.doc  КСИС_Лаб2.docx  Отчет 16ИТ3С.docx
NPO/: Lab_rab_11.rar  test.rar
OAiP(c++)/: Zadania_Dlya_2_2_-_1_Gruppa.docx  magistr.xls  oap_2.3.txt  ~$ip_L_r__2_2.docx  ~$иП л.р. № 2_1.docx  ~$иП л.р. № 2_9.docx  ОАиП л.р. № 2.docx  ОАиП л.р. № 2_1.docx  ОАиП л.р. № 2_2.docx  ОАиП л.р. № 2_3.docx  ОАиП л.р. № 2_4.docx  ОАиП л.р. № 2_5.docx  ОАиП л.р. № 2_8.docx  ОАиП л.р. № 2_9.docx  ОАиП л.р. № 3.docx  ОАиП л.р. № 4.docx  ОАиП л.р. № 5.docx  ОАиП л.р. № 6.docx
OOP/: 16-ИТ-3, Яблонский Андрей, ООП отчет -  Лабораторная работа №6  Laboratornaya_rabota_OOP_2_1.docx  Laboratornaya_rabota_OOP_2_2.docx  Laboratornaya_rabota_OOP_2_3.doc  Laboratornaya_rabota_OOP_2_4.docx  Laboratornaya_rabota_OOP_2_5.docx  lab2.EAP  lab3.EAP  lab6.zip1  lab7.zip1  ~$boratornaya_rabota_OOP_2_3.doc  Лабораторная работа ООП 2.6.docx  Лабораторная работа ООП 2.7.docx
OSiSP/: Kotlin one love или почему я не люблю Java.pptx  Laboratornaya_rabota__1.doc  Лабораторная работа № 1.doc  Лабораторная работа № 2.doc  Лабораторная работа № 3.doc  Лабораторная работа № 4.doc  Лабораторная работа № 5.doc  Лабораторная работа № 6.doc  Лабораторная работа №7.doc
OZI/: Laboratornaya_ozi_11_var4_Vinogradova.xlsx  ПР4. Яблонски А.С 16-ИТ-3 .docx  Яблонский А.С лаб.10.docx
PL/: C help 2.txt  var 7.txt  ЯП_лаб_1.doc  ЯП_лаб_10.doc  ЯП_лаб_2.doc  ЯП_лаб_3.doc  ЯП_лаб_4.doc  ЯП_лаб_5.doc  ЯП_лаб_6.doc  ЯП_лаб_7.doc  ЯП_лаб_8.doc  ЯП_лаб_9.doc
PL/OpenGL Test/: CMakeLists.txt  main.cpp
PL/PlumberGame/: CMakeLists.txt  PlumberGame  main.cpp
PL/PlumberGame/io/: IOProcessor.cpp  IOProcessor.h
PL/PlumberGame/levels/: LevelMaker.cpp  LevelMaker.h
PL/paid/pl_l8_27/: CMakeLists.txt  main.cpp
StackDB-Cpp/: CMakeLists.txt  README.md  codes.h
StackDB-Cpp/libs/git_rep/: git_rep_io.h
StarWars  Game/: .gitignore  LICENSE.md  Star-Wars
TODO/: 5.cpp  l_work.7z  pl2_7.txt
TODO/oap/: CMakeLists.txt  git_rep_scanner.cpp  main.cpp
TODO/oap/libs/database/: database.cpp  database.h
TODO/oap/libs/git_rep/: git_rep_io.cpp  git_rep_io.h
TODO/oap/libs/git_rep/date/: date.cpp
TODO/oap/libs/list/: GitRepStackList.cpp  GitRepStackList.h
TODO/oap/libs/menu/: menu.cpp  menu.h
TODO/oap2_8/DecLisk/: CMakeLists.txt  DecList.cpp  DecList.h  main.cpp
TODO/oap2_8/QueueList/: CMakeLists.txt  QueueList.cpp  QueueList.h  main.cpp
TODO/oap2_8/StackList/: CMakeLists.txt  StackList.cpp  StackList.h  main.cpp
TODO/oap2_8/ts1/: CMakeLists.txt  StackList.cpp  StackList.h  main.cpp
TODO/pl2_10/: CMakeLists.txt  main.c
TODO/pl2_10/menu/: Menu.c  Menu.h
TODO/pl2_10/tasks/task1/: task1.c  task1.h
TODO/pl2_10/tasks/task2/: task2.c  task2.h
TODO/pl2_10/tasks/task3/: task3.c  task3.h
TODO/pl2_10/tasks/task4/: task4.c  task4.h
TRPO/: Vinogradova_trpo_laba1.bp1  Яблонский ТРПО л10.docx  Яблонский ТРПО л11.docx  Яблонский ТРПО л12.docx  Яблонский ТРПО л5.docx  Яблонский ТРПО л6.docx  Яблонский ТРПО л7.docx  Яблонский ТРПО л8.docx  Яблонский ТРПО л9.docx
[psu] amp/: ~$боратоные работы АМП.docx  Лаборатоные работы АМП.docx
[psu] pms/: Программирование мобильных систем - Лаборатоные работы Android - 4.docx
[psu] менеджмент/: 16-ИТ3 Яблонский Андрей Сергеевич.docx  16ИТ-3 Вариант 3 Яблонский Андрей.docx  Biznes-plan-titul.docx  Biznes-plan.docx
final docs/: Доклад -  Яблонский А.С. 16-ИТ-3.docx  Презентация -  Яблонский А.С. 16-ИТ-3.pptx  Форма отзыва руководителя - Яблонский А.С. 16-ИТ-3.docx  Форма рецензии - Яблонский А.С. 16-ИТ-3.docx
io/: IOProcessor.cpp  IOProcessor.h
other/: primer_1.docx  ~$imer_1.docx  Бланк задания.docx  Бланк титульного листа ПЗ.docx  Ведомость дипломного проекта.docx  ДП_Пример записки 2.docx  Диплом Щербицкий 16-ИТ-2.docx  Дипломная_работа_Вавилонской_Н_С_ (1).docx
pfi/: Titulnik.docx  jQuery_-_Bootstrap.docx  readme.md
resources/: MusicManager.cpp  SoundManager.cpp  TextureManager.cpp
ui/: UI.cpp  UI.h
utils/: Utils.cpp  Utils.h
Англ Яз/: Thumbs.db  №3 5 - Types of Computers.docx
БЖЧ/: BZhCh_bilety1.docx  BZhCh_bilety2.docx  Otvety_na_BZhCh_60voprosov.docx  Voprosy_k_ekzamenu_po_distsiplineBZhCh_dlya_FIT — копия.docx  Voprosy_k_ekzamenu_po_distsiplineBZhCh_dlya_FIT.docx
История МК/: Thumbs.db  Яблонский А 16-ИТ-3.pptx  пр 4.docx
ОИТ (excel)/: Perets.rar  лр2.xlsx
Философия-Психология/: Shpory_K_Ekzamenu_-_1_Sem.docx  Shpory_K_Ekzamenu_Psikhologia_-_1_Sem.docx  Shpory_Psikhologia1.docx  Рефер.docx  Яблонский А.С Взаимосвязь Философии и Мифологии.docx  образец (титульный лист).docx  философия (темы рефератов).doc
история/: Shpora lдо СССР.docx  Shpora_Po_Rb.docx
отчет практики/: Отчет Qul ix Systems -  Яблонский А.С 2019.docx  Отчет ПП Яблонский.docx  Отчет ПП Яблонский.pages  Щ отчет.docx  отчет ПП титул.docx
политология/: Понятие общественных организаций и отличительные особенности общественных движений.docx
рамки 2/: граф. без рамок.docx
физика/: shpory_fizika_gruppy_15-IT-1 small.docx  shpory_fizika_gruppy_15-IT-1.docx
(+1523 files in other folders)
